fix: tighten code blocks a bit and dark mode copy buttons

--- a/static/css/codeblock.css
+++ b/static/css/codeblock.css
@@ -2,12 +2,12 @@
 
 .highlight {
   box-sizing: border-box;
-  margin: 1.5rem 0;
+  margin: 0;
   position: relative;
 }
 
 pre:not(.chroma) {
-  margin: 1.5rem 0;
+  margin: 0.5rem 0;
 }
 
 pre:not(.chroma) > code:not(.hljs) {
